Change base64 implementation to use the Android version